--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -316,28 +316,28 @@
 </main> -->
 <!-- <div class="bg-gradient-to-r from-stone-900 via-red-500 to-stone-900 from-20% via-50% to-80%"> -->
 <div class="bg-radial-gradient h-screen flex flex-col relative overflow-hidden">
-  <img class="absolute opacity-10 -right-10 bottom-8 -rotate-12" src="/assets/img/Angular Logo.png" alt="Angular logo">
+  <img class="absolute opacity-10 -right-10 bottom-8 -rotate-12" src="assets/img/Angular Logo.png" alt="Angular logo">
 
   <app-navbar class="h-28"></app-navbar>
   <app-hero class="flex-grow h-[100vh]"></app-hero>
 
   <section class="flex-grow flex flex-row justify-evenly pb-8 px-32 gap-16">
-    <app-card id="about" imagePath="'/assets/img/About.png'" class="flex-1">
+    <app-card id="about" imagePath="assets/img/About.png" class="flex-1">
       <h2 class="text-4xl font-bold mb-5">About</h2>
       <p>Who I am and how I got here.</p>
     </app-card>
 
-    <app-card id="projects" imagePath="'/assets/img/Projects.png'" class="flex-1">
+    <app-card id="projects" imagePath="assets/img/Projects.png" class="flex-1">
       <h2 class="text-4xl font-bold mb-5">Projects</h2>
       <p>What I created and how I made it.</p>
     </app-card>
 
-    <app-card id="skills" imagePath="'/assets/img/Skills.png'" class="flex-1">
+    <app-card id="skills" imagePath="assets/img/Skills.png" class="flex-1">
       <h2 class="text-4xl font-bold mb-5">Skills</h2>
       <p>My tools and knowledge.</p>
     </app-card>
 
-    <app-card id="contact" imagePath="'/assets/img/Contacts.png'" class="flex-1">
+    <app-card id="contact" imagePath="assets/img/Contacts.png" class="flex-1">
       <h2 class="text-4xl font-bold mb-5">Contacts</h2>
       <p>Where to find me.</p>
     </app-card>
