--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,4 +1,7 @@
-<div class="hero">
+<div class="hero" >
+  <div class="top-0 left-0 h-full w-full rounded-2xl absolute bg-cover bg-center z-0 opacity-5"
+  [ngStyle]="{'background-image': 'url(' + imagePath + ')'}"></div>
+
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div>
       <h1 class="text-5xl font-bold">Box Office News!</h1>
