--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,24 @@
-<article [id]="id" class="w-full h-fit min-h-36 rounded-2xl relative shadow-xl shadow-black hover:-translate-y-4">
-  <div class="top-0 left-0 h-full w-full rounded-2xl absolute bg-cover bg-center z-10 opacity-10"
+<article [id]="id" class="w-full h-fit rounded-2xl relative shadow-xl shadow-black" [class.min-h-36]="!isActive"
+  [ngClass]="!isActive ? 'hover:-translate-y-4' : ''">
+
+    <div class="top-0 left-0 h-full w-full rounded-2xl absolute bg-cover bg-center z-10 opacity-10"
     [ngStyle]="{'background-image': 'url(' + imagePath + ')'}"></div>
 
-  <div class="top-0 left-0 h-full min-h-36 w-full rounded-2xl bg-radial-gradient p-4 relative flex flex-col justify-end">
+  <div class="top-0 left-0 h-full w-full rounded-2xl bg-radial-gradient p-4 relative flex flex-col justify-end"
+    [class.min-h-36]="!isActive">
+    @if(!isActive) {
+    <i class="fa-solid fa-arrow-up-right-from-square absolute top-4 right-4"></i>
+    } @else {
+    <i class="fa-solid fa-book-open absolute top-4 right-4"></i>
+    }
+
+    <h2 class="text-4xl font-bold" [class.mb-5]="!isActive">
       <ng-content></ng-content>
+    </h2>
+
+    @if (!isActive) {
+    <ng-content select="p"></ng-content>
+    }
+
   </div>
 </article>
