--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,22 +1,22 @@
-<article [id]="id" class="w-full h-fit rounded-2xl relative shadow-xl shadow-black" [class.min-h-36]="!isActive"
-  [ngClass]="!isActive ? 'hover:-translate-y-4' : ''">
+<article [id]="id" class="w-full h-fit rounded-2xl relative shadow-xl shadow-black" [class.min-h-36]="isNotActive()"
+  [ngClass]="isNotActive() ? 'hover:-translate-y-4 hover:cursor-pointer' : ''" [routerLink]="routerLink">
 
     <div class="top-0 left-0 h-full w-full rounded-2xl absolute bg-cover bg-center z-10 opacity-10"
     [ngStyle]="{'background-image': 'url(' + imagePath + ')'}"></div>
 
-  <div class="top-0 left-0 h-full w-full rounded-2xl bg-radial-gradient p-4 relative flex flex-col justify-end"
-    [class.min-h-36]="!isActive">
-    @if(!isActive) {
+  <div class="top-0 left-0 h-full w-full rounded-2xl bg-radial-gradient p-4 relative flex flex-col justify-start"
+    [class.min-h-36]="isNotActive()">
+    @if(isNotActive()) {
     <i class="fa-solid fa-arrow-up-right-from-square absolute top-4 right-4"></i>
     } @else {
     <i class="fa-solid fa-book-open absolute top-4 right-4"></i>
     }
 
-    <h2 class="text-4xl font-bold" [class.mb-5]="!isActive">
+    <h2 class="text-4xl font-bold" [class.mb-5]="isNotActive()">
       <ng-content></ng-content>
     </h2>
 
-    @if (!isActive) {
+    @if (isNotActive()) {
     <ng-content select="p"></ng-content>
     }
 
