--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,15 +1,8 @@
-<div class="hero" >
-  <div class="top-0 left-0 h-full w-full rounded-2xl absolute bg-cover bg-center z-0 opacity-5"
+<div class="flex p-8 absolute top-0 left-0" >
+  <div class="top-0 left-0 h-full w-full rounded-2xl fixed bg-cover bg-center z-0 opacity-5"
   [ngStyle]="{'background-image': 'url(' + imagePath + ')'}"></div>
 
-  <div class="hero-content flex-col lg:flex-row-reverse">
-    <div>
-      <h1 class="text-5xl font-bold">Box Office News!</h1>
-      <p class="py-6">
-        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-        quasi. In deleniti eaque aut repudiandae et a id nisi.
-      </p>
-      <button class="btn btn-primary">Get Started</button>
-    </div>
+  <div class="flex flex-col justify-start z-5 gap-4">
+    <ng-content></ng-content>
   </div>
 </div>
