--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-<nav class="flex justify-between items-center p-5 bg-transparent z-10 relative">
-  <div class="text-3xl font-extrabold text-white tracking-wide">Gianluca Spadazzi</div>
+<nav class="flex justify-end items-center p-5 bg-transparent z-10 relative">
   <ul class="flex space-x-4 text-lg text-white align-middle">
     <li>Show in:</li>
 
