Svg, About & Projects

--- a/src/app/components/navbar/framework-icon/framework-icon.component.html
+++ b/src/app/components/navbar/framework-icon/framework-icon.component.html
@@ -1,6 +1,6 @@
 <li class="flex items-center h-full">
   <button [title]="title" [disabled]="disabled"
     class="grayscale disabled:grayscale-0 disabled:opacity-50 hover:-translate-y-1 hover:grayscale-0 disabled:hover:translate-y-0 disabled:hover:cursor-not-allowed disabled:border-b-2 py-1">
-    <ng-content select="svg"></ng-content>
+    <ng-content select="img"></ng-content>
   </button>
 </li>
