--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,1 +1,5 @@
-<app-hero imagePath="assets/img/Contacts.png"></app-hero>
+<app-hero imagePath="assets/img/Contacts.png">
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy]">My <span
+    class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">contacts</span></h1>
+
+</app-hero>
