--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,1 +1,6 @@
-<app-hero imagePath="assets/img/Skills.png"></app-hero>
+<app-hero imagePath="assets/img/Skills.png">
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy]">My <span
+    class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">skills</span></h1>
+
+
+</app-hero>
