--- a/src/app/pages/projects/project-button/project-button.component.html
+++ b/src/app/pages/projects/project-button/project-button.component.html
@@ -1,7 +1,11 @@
-<button class="glass px-8 py-4 flex flex-col items-center gap-2">
-  <p class="font-mono uppercase text-lg">{{title}}</p>
+<button class="glass px-4 py-2 flex flex-col items-center hover:scale-105 w-64 group" (click)="openCarousel()">
+  <p class="font-mono uppercase text-lg truncate w-[calc(16rem-2rem)]">{{project.name}}</p>
+
   <div class="divider m-0"></div>
-  <section class="flex flex-row gap-2">
-    <ng-content></ng-content>
+
+  <section class="flex flex-row gap-3 grayscale-[90%] group-hover:grayscale-0">
+    @for(tech of project.stack; track tech){
+      <img [src]="svgs[tech.toLowerCase()]" [alt]="tech" [title]="tech" class="h-5">
+    }
   </section>
 </button>
