--- a/src/app/pages/projects/projects-carousel/projects-carousel.component.html
+++ b/src/app/pages/projects/projects-carousel/projects-carousel.component.html
@@ -7,7 +7,7 @@
 
 <ng-template #carouselItem let-project="project" let-back="back" let-ahead="ahead">
   <div [id]="project.id" class="carousel-item relative w-full">
-    <img src="https://img.daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.webp" alt="Cover image"
+    <img src="https://img.daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.webp" alt="Cover"
       class="w-full relative opacity-0" />
 
     <article class="w-full absolute top-0 py-12 px-24 h-full glass flex flex-col gap-4">
