--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,5 +1,5 @@
-<div class="flex p-8 absolute top-0 left-0" >
-  <div class="flex flex-col justify-start z-10 gap-4">
+<div class="flex p-8 absolute top-0 left-0 w-full" >
+  <div class="flex flex-col justify-start z-10 gap-4 flex-1">
     <ng-content></ng-content>
   </div>
 
