--- a/src/app/pages/projects/project-button/project-button.component.html
+++ b/src/app/pages/projects/project-button/project-button.component.html
@@ -1,4 +1,4 @@
-<button class="glass px-4 py-2 flex flex-col items-center hover:scale-105 w-64 group" (click)="openCarousel()">
+<button class="glass px-4 py-2 flex flex-col items-center hover:scale-105 w-full lg:w-64 group" (click)="openCarousel()">
   <p class="font-mono uppercase text-lg truncate w-[calc(16rem-2rem)]">{{project.name}}</p>
 
   <div class="divider m-0"></div>
