--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,16 +1,17 @@
 <app-hero imagePath="assets/img/Projects.png">
-  <h1 class="text-6xl uppercase font-extrabold font-[fantasy]">My <span
-      class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">Projects</span></h1>
-
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start">
+    <span>My </span>
+    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">Projects</span>
+  </h1>
 
   @if(service.getShowCarousel()){
-    <app-projects-carousel [projects]="projects" [svgs]="svgs" />
+  <app-projects-carousel [projects]="projects" [svgs]="svgs" class="h-full lg:h-fit"/>
   } @else {
-    <section class="flex flex-row flex-wrap gap-8 justify-center">
-      @for(project of projects; track project.id){
-      <app-project-button [project]="project" [svgs]="svgs"/>
-      }
-    </section>
+  <section class="flex flex-col lg:flex-row lg:flex-wrap gap-8 lg:justify-center">
+    @for(project of projects; track project.id){
+    <app-project-button [project]="project" [svgs]="svgs"/>
+    }
+  </section>
   }
 
 </app-hero>
