--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <router-outlet/>
   </div>
 
-  <section class="flex-grow flex flex-row justify-evenly items-end pb-8 px-32 gap-16">
+  <section class="hidden flex-grow lg:flex lg:flex-row lg:justify-evenly lg:items-end pb-8 px-32 gap-16">
     <app-card id="about" imagePath="assets/img/About.png" class="flex-1" routerLink="about">
       About
       <p>Who I am and how I got here.</p>
