--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,11 +1,13 @@
 <app-hero imagePath="assets/img/About.png">
-  <h1 class="text-6xl uppercase font-extrabold font-[fantasy]">Gianluca <span
-      class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">Spadazzi</span></h1>
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start">
+    <span>Gianluca </span>
+    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">Spadazzi</span>
+  </h1>
 
-  <div class="flex flex-row gap-8">
+  <div class="flex flex-col lg:flex-row gap-8">
     <section class="flex-1">
       <img src="assets/img/Me_red.png" alt="This is me!"
-        class="h-60 mr-4 aspect-square opacity-40 float-left rounded-xl">
+        class="h-60 mr-4 opacity-60 place-self-center lg:place-content-start float-none lg:float-left rounded-xl">
 
       @for(item of about | keyvalue; track item.key; let i = $index ){
       <p class="text-md flex flex-col text-pretty py-2">
@@ -16,7 +18,7 @@
       }
     </section>
 
-    <section class="flex-1 flex flex-col gap-2 overflow-y-scroll max-h-96 pr-4">
+    <section class="flex-1 flex flex-col gap-2 lg:overflow-y-scroll max-h-96 lg:pr-4">
       @for(exp of experiences; track exp.id){
       <app-experience [experience]="exp" />
       }
