--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,5 +1,101 @@
 <app-hero imagePath="assets/img/Contacts.png">
-  <h1 class="text-6xl uppercase font-extrabold font-[fantasy]">My <span
-    class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">contacts</span></h1>
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start">
+    <span>My </span>
+    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">contacts</span>
+  </h1>
 
+  <ul class="flex flex-col lg:grid lg:grid-cols-4 lg:grid-rows-2 gap-4 lg:gap-8">
+    <li class="glass p-4 lg:p-8 flex flex-col gap-2 lg:gap-4 items-center order-3 lg:order-1">
+      <p class="font-mono text-2xl font-semibold">
+        <i class="fa-solid fa-phone fa-sm"></i>
+        Phone
+      </p>
+
+      <p class="text-lg">
+        +393887436265
+      </p>
+    </li>
+
+    <li class="glass p-4 lg:p-8 flex flex-col gap-2 lg:gap-4 items-center order-4 lg:order-2">
+      <p class="font-mono text-2xl font-semibold">
+        <i class="fa-solid fa-envelope fa-sm"></i>
+        E-mail
+      </p>
+
+      <p class="text-lg">
+        spadazzi.gianluca&#64;gmail.com
+      </p>
+    </li>
+
+    <li class="glass p-4 lg:p-8 order-1 lg:order-4">
+      <a class="flex flex-col items-center gap-2 lg:gap-4 hover:animate-pulse hover:text-white"
+        href="https://www.linkedin.com/in/gianluca-spadazzi/" target="_blank" rel="noopener">
+        <p class="font-mono text-2xl font-semibold ">LinkedIn</p>
+
+        <i class="fa-brands fa-linkedin text-5xl "></i>
+      </a>
+    </li>
+
+    <li class="glass p-4 lg:p-8 order-2 lg:order-5">
+      <a class="flex flex-col items-center gap-2 lg:gap-4 hover:animate-pulse hover:text-white"
+        href="https://github.com/Giaspa" target="_blank" rel="noopener">
+        <p class="font-mono text-2xl font-semibold ">GitHub</p>
+
+        <i class="fa-brands fa-github text-5xl "></i>
+      </a>
+    </li>
+
+    <li class="glass col-span-2 row-span-2 p-4 lg:p-8 flex flex-col gap-4 order-5 lg:order-3">
+      <p class="font-mono text-2xl font-semibold">Contact me</p>
+
+      <form #templateForm="ngForm" class="flex-1 flex flex-col gap-4 lg:gap-2" (ngSubmit)="onSubmit(templateForm)">
+        <label class="input input-bordered flex items-center gap-2 glass rounded-md lg:w-1/2 relative">
+          <i class="fa-solid fa-envelope"></i>
+          <input type="email" class="grow read-only:cursor-not-allowed" placeholder="Insert your email! *" required
+            name="email" ngModel [readOnly]="isSent" />
+
+          <small *ngIf="hasInputError(templateForm, 'email')"
+            class="text-red-500 absolute mr-4 right-0 top-3">Who?</small>
+        </label>
+
+        <label class="input input-bordered flex items-center gap-2 glass rounded-md relative ">
+          <input type="text" placeholder="Insert the object! *" class="w-full read-only:cursor-not-allowed" required
+            name="object" ngModel [readOnly]="isSent" />
+
+          <small *ngIf="hasInputError(templateForm, 'object')"
+            class="text-red-500 absolute mr-4 right-0 top-3">What?</small>
+        </label>
+
+        <label class="flex-1 form-control flex flex-row items-center gap-2 glass rounded-md relative ">
+          <textarea
+            class="textarea textarea-bordered bg-transparent resize-none flex-1 h-40 lg:h-fit read-only:cursor-not-allowed"
+            placeholder="Let's connect! How can I help you? *" required name="body" ngModel
+            [readOnly]="isSent"></textarea>
+
+          <small *ngIf="hasInputError(templateForm, 'body')"
+            class="text-red-500 mr-4 absolute right-0 bottom-3 lg:top-3">How?</small>
+        </label>
+
+        @if(!isSent && !hasError){
+        <button type="submit"
+          class="btn bg-neutral text-neutral-content border-transparent hover:bg-neutral-content hover:text-neutral hover:border-transparent hover:animate-pulse w-1/3 self-center lg:self-end">
+          Send!
+          <i class="fa-regular fa-paper-plane"></i>
+        </button>
+        } @else if(!isSent && hasError) {
+        <button class="btn btn-error border-transparent w-1/3 self-center lg:self-end"
+          (click)="onRetry($event, templateForm)">
+          Ops... retry!
+          <i class="fa-regular fa-thumbs-down"></i>
+        </button>
+        } @else {
+        <div
+          class="btn btn-success border-transparent w-1/3 self-center lg:self-end hover:bg-success hover:cursor-default">
+          Sent!
+          <i class="fa-regular fa-thumbs-up"></i>
+        </div>
+        }
+      </form>
+    </li>
+  </ul>
 </app-hero>
