--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="flex justify-start lg:justify-end items-center p-5 bg-transparent z-20 relative">
-  <ul class="hidden lg:flex space-x-4 text-lg text-white align-middle">
+  <!-- <ul class="hidden lg:flex space-x-4 text-lg text-white align-middle">
     <li>Show in:</li>
 
     <app-framework-icon [disabled]="true" title="Angular">
@@ -13,7 +13,7 @@
     <app-framework-icon title="Vue.js">
       <img src="assets/svg/vue.svg" alt="Vue.js" class="h-5">
     </app-framework-icon>
-  </ul>
+  </ul> -->
 
   <div class="dropdown lg:hidden">
     <div tabindex="0" role="button" class="btn lg:hidden">
@@ -33,7 +33,7 @@
       <li>
         <a class="text-lg" routerLinkActive="underline underline-offset-2" routerLink="contacts">Contacts</a>
       </li>
-      <li class="h-8">
+      <!-- <li class="h-8">
         <a></a>
       </li>
       <li>
@@ -51,7 +51,7 @@
             <img src="assets/svg/vue.svg" alt="Vue.js" class="h-5">
           </app-framework-icon>
         </ul>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
