--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="bg-radial-gradient h-screen flex flex-col relative overflow-hidden">
+  <app-navbar class="h-28 absolute lg:right-0"></app-navbar>
 
-  <app-navbar class="h-28"></app-navbar>
-  <div class="flex-grow h-[100vh]">
+  <div class="flex-grow h-[calc(100%-15rem)]">
     <router-outlet/>
   </div>
 
-  <section class="hidden flex-grow lg:flex lg:flex-row lg:justify-evenly lg:items-end pb-8 px-32 gap-16">
+  <section class="hidden lg:flex lg:flex-row lg:justify-evenly lg:items-end pb-8 px-32 gap-16">
     <app-card id="about" imagePath="assets/img/About.png" class="flex-1" routerLink="about">
       About
       <p>Who I am and how I got here.</p>
