--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="flex p-4 lg:p-8 absolute top-0 left-0 w-full h-full overflow-auto lg:h-fit" >
+<div class="flex p-4 lg:p-8 top-0 left-0 w-full h-full overflow-auto" >
   <div class="flex flex-col justify-start z-10 gap-4 flex-1">
     <ng-content></ng-content>
   </div>
