--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,10 +1,10 @@
-<app-hero imagePath="assets/img/Skills.png" class="flex flex-col w-full">
-  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start">
+<app-hero imagePath="assets/img/Skills.png">
+  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start h-32 lg:h-16">
     <span>My </span>
     <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">skills</span>
   </h1>
 
-  <section class="flex flex-col lg:flex-row flex-wrap gap-4 flex-1">
+  <section class="flex flex-col lg:flex-row flex-wrap gap-4 flex-1 lg:max-h-[calc(100vh-16rem-3rem)] lg:overflow-y-auto">
     @for (group of skillGroup; track $index) {
     <article class="glass p-4 flex-1">
       <label class="font-mono font-semibold border-b w-full block mb-2">{{group.group || "Others..."}}</label>
