--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,5 +1,5 @@
 <app-hero imagePath="assets/img/Skills.png">
-  <h1 class="text-6xl uppercase font-extrabold font-[fantasy] flex flex-col lg:flex-row text-end lg:text-start h-32 lg:h-16">
+  <h1 class="text-6xl uppercase font-extrabold black-ops-one-regular flex flex-col lg:flex-row text-end lg:text-start h-32 lg:h-16">
     <span>My </span>
     <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-red-900">skills</span>
   </h1>
