--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
   <div *ngIf="isDropdownOpen" class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent z-15" (click)="closeDropdown()"></div>
 
   <div #dropdownDetails class="dropdown lg:hidden absolute top-1 left-1 z-20">
-    <button role="button" class="btn lg:hidden glass rounded-sm" (click)="toggleDropdown()">
+    <button class="btn lg:hidden glass rounded-sm" (click)="toggleDropdown()">
       <i class="fa-solid fa-bars"></i>
     </button>
 
