--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 
   <div *ngIf="isDropdownOpen" class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent" (pointerdown)="closeDropdown()"></div>
 
-  <div #dropdownDetails class="dropdown lg:hidden absolute top-1 left-1 z-50">
+  <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50 pointer-events-auto">
     <button class="btn lg:hidden glass rounded-sm" (pointerdown)="toggleDropdown()">
       <i class="fa-solid fa-bars"></i>
     </button>
