--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,9 +20,10 @@
   }
 
   <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50 pointer-events-auto">
-    <button class="btn lg:hidden glass rounded-sm" (pointerdown)="toggleDropdown()">
+    <button class="btn lg:hidden glass rounded-sm pointer-events-auto" (click)="toggleDropdown()">
       <i class="fa-solid fa-bars"></i>
     </button>
+
     @if(isDropdownOpen){
     <ul class="menu dropdown-content z-20 mt-3 w-52 p-2 shadow rounded-sm glass">
       <li>
