--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
   </ul> -->
 
   @if(isDropdownOpen){
-  <div class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent" (pointerdown)="closeDropdown()"></div>
+  <div class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent z-20" (pointerdown)="closeDropdown()"></div>
   }
 
   <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50 pointer-events-auto">
