--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,9 +15,9 @@
     </app-framework-icon>
   </ul> -->
 
-  @if(isDropdownOpen){
+  <!-- @if(isDropdownOpen){
   <div class="lg:hidden absolute top-0 left-0 w-screen h-screen bg-transparent z-20" (pointerdown)="closeDropdown()"></div>
-  }
+  } -->
 
   <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50 pointer-events-auto">
     <button class="btn lg:hidden glass rounded-sm pointer-events-auto" (click)="toggleDropdown()">
