change text color globally

--- a/src/app/pages/about/assert-item/assert-item.component.html
+++ b/src/app/pages/about/assert-item/assert-item.component.html
@@ -8,6 +8,6 @@
 
   <app-assert-item [key]="nextkey"></app-assert-item>
   } @else {
-    <button #focusbutton (click)="showNext()" class="btn glass">{{message}}</button>
+    <button #focusbutton (click)="showNext()" class="btn glass text-stone-300">{{message}}</button>
   }
 </div>
