--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -78,7 +78,7 @@
 
         @if(!isSent && !hasError){
         <button type="submit"
-          class="btn bg-neutral text-neutral-content border-transparent hover:bg-neutral-content hover:text-neutral hover:border-transparent hover:animate-pulse w-1/3 self-center lg:self-end">
+          class="btn bg-neutral text-stone-300 border-transparent hover:bg-neutral-content hover:text-white hover:border-transparent hover:animate-pulse w-1/3 self-center lg:self-end">
           Send!
           <i class="fa-regular fa-paper-plane"></i>
         </button>
