--- a/src/app/pages/projects/projects-carousel/projects-carousel.component.html
+++ b/src/app/pages/projects/projects-carousel/projects-carousel.component.html
@@ -18,7 +18,7 @@
         </a>
 
         <button (click)="closeCarousel()"
-          class="btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-neutral-content">
+          class="btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-stone-300">
           <i class="fa-solid fa-xmark fa-2xl"></i>
         </button>
 
@@ -30,7 +30,7 @@
 
       <p class="flex flex-col">
         <span class="text-2xl font-mono uppercase font-semibold">{{project.name}}</span>
-        <span class="flex flex-col lg:flex-row text-sm font-mono text-neutral-content lg:gap-4">
+        <span class="flex flex-col lg:flex-row text-sm font-mono text-stone-300 lg:gap-4">
           <span>
             {{project.dateFrom}}{{project.dateTo? " | "+project.dateTo: null}}
           </span>
@@ -122,7 +122,7 @@
 
     <div class="hidden lg:flex absolute right-0 top-0 -translate-y-0 transform justify-between">
       <button (click)="closeCarousel()"
-        class="btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-neutral-content">
+        class="btn btn-circle border-transparent bg-transparent hover:border-transparent hover:bg-transparent hover:scale-95 text-stone-300">
         <i class="fa-solid fa-xmark fa-2xl"></i>
       </button>
     </div>
