--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="flex justify-start lg:justify-end items-center p-5 bg-transparent z-20 relative">
+<nav class="flex justify-start lg:justify-end items-center p-5 bg-transparent z-20 relative text-stone-300">
   <!-- <ul class="hidden lg:flex space-x-4 text-lg text-white align-middle">
     <li>Show in:</li>
 
