minor style fix

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
   } -->
 
   <div #dropdownDetails class="dropdown lg:hidden absolute top-4 left-4 z-50 pointer-events-auto">
-    <button class="btn lg:hidden glass rounded-sm pointer-events-auto" (click)="toggleDropdown()">
+    <button class="btn lg:hidden glass text-stone-300 rounded-sm pointer-events-auto" (click)="toggleDropdown()">
       <i class="fa-solid fa-bars"></i>
     </button>
 
