--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -68,7 +68,7 @@
 
         <label class="flex-1 form-control flex flex-row items-center gap-2 glass rounded-md relative ">
           <textarea
-            class="textarea textarea-bordered bg-transparent resize-none flex-1 h-full read-only:cursor-not-allowed"
+            class="textarea textarea-bordered bg-transparent resize-none flex-1 h-full min-h-52 lg:min-h-8 read-only:cursor-not-allowed"
             placeholder="Let's connect! How can I help you? *" required name="body" ngModel
             [readOnly]="isSent"></textarea>
 
